[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plrun"
version = "0.1.2"
description = "Run shell commands in parallel with console logs."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
plrun = "plrun.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["plrun*"]
